--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
   <title>PersonalSite</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.3453602dff855bf41288.css"></head>
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1">
+  <link rel="icon"
+        type="image/x-icon"
+        href="favicon.ico">
+  <link rel="stylesheet"
+        href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="styles.22ce7a1b36ae399d4864.css"></head>
 
 <body class="my-theme">
   <app-root></app-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.2f4a59095805af02bd79.js"></script><script type="text/javascript" src="main.a72dd6768e0517f9d9c6.js"></script></body>
+<script type="text/javascript" src="runtime.11cb37509274e7270ae0.js"></script><script type="text/javascript" src="polyfills.9a5f6d04e0781d28c53e.js"></script><script type="text/javascript" src="main.bef608422d68137cc111.js"></script></body>
 
 </html>
