--- a/index.html
+++ b/index.html
@@ -2,21 +2,28 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>PersonalSite</title>
-  <base href="/">
+      <meta charset="utf-8">
+      <title>PersonalSite</title>
+      <base href="/">
 
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1">
-  <link rel="icon"
-        type="image/x-icon"
-        href="favicon.ico">
-  <link rel="stylesheet"
-        href="https://fonts.googleapis.com/icon?family=Material+Icons">
+      <meta name="viewport"
+            content="width=device-width, initial-scale=1">
+      <meta name="theme-color"
+            content="#673ab7">
+      <link rel="icon"
+            type="image/x-icon"
+            href="favicon.ico">
+      <link rel="stylesheet"
+            href="https://fonts.googleapis.com/icon?family=Material+Icons">
+      <link rel="manifest"
+            href="manifest.json">
 <link rel="stylesheet" href="styles.ebe003e00478e7a7b4a1.css"></head>
 
 <body class="my-theme">
-  <app-root></app-root>
-<script type="text/javascript" src="runtime.fb1ac14a86019a3950a3.js"></script><script type="text/javascript" src="polyfills.9a5f6d04e0781d28c53e.js"></script><script type="text/javascript" src="main.b54ad553b4d17d0fce8a.js"></script></body>
+      <app-root>
+            <mat-progress-spinner color="accent"
+                                  [mode]="indeterminate"></mat-progress-spinner>
+      </app-root>
+<script type="text/javascript" src="runtime.fb1ac14a86019a3950a3.js"></script><script type="text/javascript" src="polyfills.9a5f6d04e0781d28c53e.js"></script><script type="text/javascript" src="main.b17514cc3e4f85bf49b4.js"></script></body>
 
 </html>
