--- a/404.html
+++ b/404.html
@@ -4,7 +4,8 @@
 <head>
       <meta charset="utf-8">
       <title>PersonalSite</title>
-      <base href="'/index.html'">
+      <base href="/">
+
       <meta name="viewport"
             content="width=device-width, initial-scale=1">
       <meta name="theme-color"
