--- a/404.html
+++ b/404.html
@@ -17,6 +17,9 @@
             href="https://fonts.googleapis.com/icon?family=Material+Icons">
       <link rel="manifest"
             href="manifest.json">
+      <link rel="apple-touch-icon"
+            sizes="180x180"
+            href="assets/myAvatar_180x180.png">
 <link rel="stylesheet" href="styles.ebe003e00478e7a7b4a1.css"></head>
 
 <body class="my-theme">
