--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
       <meta charset="utf-8">
-      <title>PersonalSite</title>
+      <title>DKS Dev Site</title>
       <base href="/">
 
       <meta name="viewport"
