--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       <link rel="apple-touch-icon"
             sizes="180x180"
             href="assets/myAvatar_180x180.png">
-<link rel="stylesheet" href="styles.aef73e898ca05582551e.css"></head>
+<link rel="stylesheet" href="styles.1a6dedad5d99a2786c2e.css"></head>
 
-<body class="my-theme">
+<body>
       <app-root>
             <mat-progress-spinner color="accent"
                                   [mode]="indeterminate"></mat-progress-spinner>
       </app-root>
-<script type="text/javascript" src="runtime.3424f5f282c0e23e79ce.js"></script><script type="text/javascript" src="polyfills.2a9c99767f1cc5e74f44.js"></script><script type="text/javascript" src="main.1cce38bd01a632876794.js"></script></body>
+<script type="text/javascript" src="runtime.dd1ead3cf36859c78c2e.js"></script><script type="text/javascript" src="polyfills.2a9c99767f1cc5e74f44.js"></script><script type="text/javascript" src="main.0c43e64c2f682ff69966.js"></script></body>
 
 </html>
