Updated index.html as under development

--- a/index.html
+++ b/index.html
@@ -6,27 +6,21 @@
       <title>DKS Dev Site</title>
       <base href="/">
 
-      <meta name="viewport"
-            content="width=device-width, initial-scale=1">
-      <meta name="theme-color"
-            content="#673ab7">
-      <link rel="icon"
-            type="image/x-icon"
-            href="favicon.ico">
-      <link rel="stylesheet"
-            href="https://fonts.googleapis.com/icon?family=Material+Icons">
-      <link rel="manifest"
-            href="manifest.json">
-      <link rel="apple-touch-icon"
-            sizes="180x180"
-            href="assets/myAvatar_180x180.png">
-<link rel="stylesheet" href="styles.734ad46d2cd507df5535.css"></head>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="theme-color" content="#673ab7">
+      <link rel="icon" type="image/x-icon" href="favicon.ico">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+      <link rel="manifest" href="manifest.json">
+      <link rel="apple-touch-icon" sizes="180x180" href="assets/myAvatar_180x180.png">
+      <link rel="stylesheet" href="styles.734ad46d2cd507df5535.css">
+</head>
 
 <body>
-      <app-root>
+      <h1>Site under development...</h1>
+      <!-- <app-root>
             <mat-progress-spinner color="accent"
                                   [mode]="indeterminate"></mat-progress-spinner>
       </app-root>
-<script type="text/javascript" src="runtime.86bb35b4d7afeb17a3cf.js"></script><script type="text/javascript" src="polyfills.2a9c99767f1cc5e74f44.js"></script><script type="text/javascript" src="main.0c5176e9459ae00fe1d5.js"></script></body>
+<script type="text/javascript" src="runtime.86bb35b4d7afeb17a3cf.js"></script><script type="text/javascript" src="polyfills.2a9c99767f1cc5e74f44.js"></script><script type="text/javascript" src="main.0c5176e9459ae00fe1d5.js"></script></body> -->
 
 </html>
