--- a/404.html
+++ b/404.html
@@ -8,10 +8,10 @@
 
       <link rel="stylesheet"
             href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="styles.b40ad22c462ac7d64eee.css"></head>
+<link rel="stylesheet" href="styles.76200050e06741bb73fd.css"></head>
 
-<body>
+<body class="my-theme">
       <app-root></app-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.2f4a59095805af02bd79.js"></script><script type="text/javascript" src="main.d800ecaca85d69641530.js"></script></body>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.2f4a59095805af02bd79.js"></script><script type="text/javascript" src="main.6c53d42b85bdcc5c4e3d.js"></script></body>
 
 </html>
